--- a/mami.html
+++ b/mami.html
@@ -234,8 +234,12 @@
       }
     }
 
-    <!-- For iPhone: -->
-    <link media="only screen and (max-device-width: 480px)" href="small-device.css" type= "text/css" rel="stylesheet">
+    @media  ( max-width : 480px ) {
+      .element {
+      width : 480px ;
+      }
+    }
+
     </style>
   </head>
   <body>
