--- a/mami.html
+++ b/mami.html
@@ -218,19 +218,19 @@
 
     @keyframes close {
         0%, 100% {
-            transform: scale(1, .05);
+            -webkit-transform: scale(1, .05);
         }
         5%, 95% {
-            transform: scale(1, 1);
+            -webkit-transform: scale(1, 1);
         }
     }
 
     @keyframes beat {
       0%, 40%, 100% {
-        transform: scale(1) rotate(-45deg);
+        -webkit-transform: scale(1) rotate(-45deg);
       }
       25%, 60% {
-        transform: scale(1.1) rotate(-45deg);
+        -webkit-transform: scale(1.1) rotate(-45deg);
       }
     }
 
