--- a/mami.html
+++ b/mami.html
@@ -213,12 +213,9 @@
       left:165px;
       box-shadow: -40px 0 #333;
       transform-origin: 50%;
-      animation: close 2s infinite;
+      -webkit-animation: close 2s infinite;
     }
-
-  
-   
-
+      
     </style>
   </head>
   <body>
