--- a/mami.html
+++ b/mami.html
@@ -160,7 +160,7 @@
       top:330px;
       left:220px;
       transform: rotate(-45deg);
-      animation: .8s beat infinite;
+      -webkit-animation: .8s beat infinite;
     }
       
     .heart:before, .heart:after {
