--- a/mami.html
+++ b/mami.html
@@ -161,6 +161,7 @@
       left:220px;
       transform: rotate(-45deg);
       -webkit-animation: .8s beat infinite;
+      -webkit-animation-delay: -6s;
     }
       
     .heart:before, .heart:after {
