--- a/mami.html
+++ b/mami.html
@@ -2,19 +2,29 @@
 <html>
   <head>
     <style>
-      /*I suck at coding :3 */
+      /* I suck at coding :3 */
       
       @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
 
       body {
-      margin-top: 500px;
-      margin-right: 200px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      background-color: #ffcaca;
-      font-family: 'Mochiy Pop P One', sans-serif;
+        background-image: url(2806.png);
+        background-size: cover;
+        margin-top: 500px;
+        margin-right: 200px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        background-color: #ffcaca;
+        font-family: 'Mochiy Pop P One', sans-serif;
     }
+
+    @media only screen and (min-width: 1000px) {
+  /* For browser: */
+      body {
+        overflow-y: hidden;
+        margin-top: 12px;
+      }    
+  }
 
     input#open {
     display: none;
@@ -255,10 +265,12 @@
         <div class="heart"></div>
         <div class="smile"></div>
         <div class="eyes"></div>
-        <img class="gif" src="love-animated.gif">
+        <div>
+          <img class="gif" src="love-animated.gif">
+        </div>
     </div>
     
-    <div class="wrapper">
+      <div class="wrapper">
       <span>&#10084</span>
       <span>&#10084</span>
       <span>&#10084</span>
@@ -274,8 +286,7 @@
       <span>&#10084</span>
       <span>&#10084</span>
       <span>&#10084</span>
-  </div>
-
+      </div>
     </div>
   </body>
 </html>
