--- a/mami.html
+++ b/mami.html
@@ -6,6 +6,10 @@
       
       @import url('https://fonts.googleapis.com/css2?family=Mochiy+Pop+P+One&display=swap');
 
+      html {
+        cursor: url(libko.PNG), auto;
+      }
+
       body {
         background-image: url(2806.png);
         background-size: cover;
@@ -79,7 +83,6 @@
       top:0;
       background-color: transparent;
       z-index:6;
-      cursor: pointer;
     }
 
     #open:checked ~ .card-front {
@@ -271,21 +274,21 @@
     </div>
     
       <div class="wrapper">
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
-      <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
+        <span>&#10084</span>
       </div>
     </div>
   </body>
